--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <title>MentorConnect - Comprehensive Mentorship Platform</title>
+    <!-- Cache bust: 1f4f1a1 -->
   </head>
   <body>
     <div id="root"></div>
